parttimeを作成する処理を作成
