# swagger/openapi.yaml
@@ -130,24 +130,39 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                job_name:
                   type: string
                   example: "放課後ティータイム"
-                color:
-                  type: string
-                  example: "#FF0000"
-                closingDate:
-                  type: integer
-                  example: 0
-                  description: "締日。月末の場合は0"
-                payDay:
-                  type: integer
-                  example: 25
-                  description: "支払日"
-                pay:
+                hourly_wage:
                   type: integer
                   example: 1070
-                  description: "時給"
+                transportation_allowance:
+                  type: integer
+                  example: 0
+                holiday_allowance:
+                  type: integer
+                  example: 0
+                time_allowance_start:
+                  type: string
+                  example: "17:00"
+                time_allowance_end:
+                  type: string
+                  example: "20:00"
+                target_monthly_income:
+                  type: integer
+                  example: 100000
+                closing_date:
+                  type: integer
+                  example: 30
+                transfer_date:
+                  type: integer
+                  example: 25
+                up_manny:
+                  type: integer
+                  example: 1312
+                part_time_color_id:
+                  type: integer
+                  example: 1
       responses:
         "200":
           description: "登録が成功した場合"
